<resources>
    <string name="app_name">UILayouts</string>
    <string name="question_name">Как вас зовут?</string>
    <string name="question_about_yourself">О себе</string>
    <string name="name">Айпери</string>
    <string name="about_yourself">Расскажите немного о себе…</string>
    <string name="question_date">Дата рождения</string>
    <string name="date">08 Августа, 1993</string>
    <string name="question_gender">Пол</string>
    <string name="gender_male">Мужской</string>
    <string name="flirt">Познакомлюсь для флирта</string>
    <string name="relations">Хочу серьезные отношения</string>
    <string name="bored">Скучно, хочу повеселиться</string>
    <string name="gender_female">Женский</string>
    <string name="question_goal">Цель</string>
    <string name="gender">Выберите пол</string>
    <string name="slash">/</string>
    <string name="goal">Отметьте одну из целей</string>
    <string name="save">Сохранить</string>
    <string name="show_profile">Показать профиль</string>
    <string name="job">Студентка</string>
    <string name="views">ПРОСМОТРОВ</string>
    <string name="likes_me">НРАВЛЮСЬ</string>
    <string name="i_like">НРАВЯТСЯ</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="settings">Настройки</string>
    <string name="advices">Советы MeetApp</string>
    <string name="supports">Поддержка</string>
    <string name="feedback">Обратная связь</string>
    <string name="profile_photo">profile_photo</string>
    <string name="reciprocity">Взаимности</string>
    <string name="about_me">Обо мне</string>
    <string name="all">ВСЕ</string>
    <string name="chats">Чаты</string>
    <string name="free_chat">Здесь будут отображаться \n ваши активные чаты</string>
    <string name="no_information">Айпери пока не сообщила ничего о себе</string>
    <string name="free_reciprocity">Ставьте больше отметок «Нравится», чтобы получать взаимности</string>
    <string name="enter_message">Введите текст</string>
    <string name="skip">Пропустить</string>
    <string name="like">Нравится</string>
    <string name="write">Написать</string>
    <string name="send">ОТПРАВИТЬ</string>
    <string name="sympathy">Вы проявили симпатию</string>
    <string name="feedback_help">Чем мы можем вам помочь?</string>
    <string name="feedback_about">Технические неполадки, предложения по улучшению и другие моменты, о которых Вы хотели бы нам сообщить</string>
    <string name="feedback_question">Есть вопросы? Мы поможем вам!</string>
    <string name="sign_in_sms">Вход через приглашение</string>
    <string name="about_sms">Для создания нового аккаунта или входа в имеющийся, нам нужен ваш номер, чтобы мы могли отправить на него приглашение</string>
    <string name="phone_number">Номер телефона</string>
    <string name="code_phone_number">+996</string>
    <string name="get_code">ПОЛУЧИТЬ КОД</string>
    <string name="hint_sms">(* * *) * * * * * *</string>
    <string name="hint_code">* * * *</string>
    <string name="code_sms">Код из СМС</string>
    <string name="get_callback">Получение приглашения</string>
    <string name="sms_sending">Мы отправили СМС с приглашением на номер </string>
    <string name="number">+996 (772) 17 44 58</string>
    <string name="sms_sending_continue">оно должно дойти в течении 3 минут</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="facebook_sign_in">Войти через Facebook</string>
    <string name="sms_sign_in">Войти через СМС-код</string>
    <string name="google_sign_in">Войти через Google</string>
    <string name="registration_text">Регистрируюясь, вы соглашаетесь с условиями <u>пользовательского соглашения</u></string>
    <string name="russian">Русский</string>
    <string name="kyrgyz">Кыргызча</string>
    <string name="english">English</string>
    <string name="welcome_ky">Кош келиңиз!</string>
    <string name="facebook_sign_in_ky">Facebook менен кирүү</string>
    <string name="sms_sign_in_ky">СМС-код аркылуу кирүү</string>
    <string name="google_sign_in_ky">Google менен кирүү</string>
    <string name="registration_text_ky">Регистрируюясь, вы соглашаетесь с условиями <u>пользовательского соглашения</u></string>
    <string name="welcome_en">You are welcome!</string>
    <string name="facebook_sign_in_en">Sign in with Facebook</string>
    <string name="sms_sign_in_en">Sign in with SMS-code</string>
    <string name="google_sign_in_en">Sign in with Google</string>
    <string name="registration_text_en">By registering, you agree to the terms of the \n <u> user agreement</u></string>
</resources>
