<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_logo_grey" />

            <TextView
                android:id="@+id/welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/welcome"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/facebook"
                style="?borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="start"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/facebook_background"
                android:drawableLeft="@drawable/btn_facebook"
                android:drawablePadding="24dp"
                android:shadowColor="#38469A"
                android:text="@string/facebook_sign_in"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <Button
                android:id="@+id/sms"
                style="?borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="start"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/sms_background"
                android:drawableLeft="@drawable/btn_sms"
                android:drawablePadding="24dp"
                android:text="@string/sms_sign_in"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <Button
                android:id="@+id/google"
                style="?borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="start"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/google_background"
                android:drawableLeft="@drawable/btn_google"
                android:drawablePadding="24dp"
                android:elevation="1dp"
                android:text="@string/google_sign_in"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/confidentiality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/registration_text"
                android:textAlignment="center"
                android:textColor="@color/grey"
                android:textSize="12sp" />

        </LinearLayout>

    </ScrollView>

    <RadioGroup
        android:id="@+id/radio_group_locale"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/russian"
            style="@style/LocaleRadioButton"
            android:text="@string/russian" />

        <RadioButton
            android:id="@+id/kyrgyz"
            style="@style/LocaleRadioButton"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/kyrgyz" />

        <RadioButton
            android:id="@+id/english"
            style="@style/LocaleRadioButton"
            android:text="@string/english" />

    </RadioGroup>

</RelativeLayout>